# BmpZipper

./: .clang-format  .gitignore  App.qml  CMakeLists.txt  Dockerfile  Makefile  README.md  main.cpp
BmpLib/: CMakeLists.txt  bmpdefs.h  bmpexceptions.cpp  bmpexceptions.h  bmpproxy.cpp  bmpproxy.h  bmputils.h  dynamicbitset.cpp  dynamicbitset.h  filehandler.cpp  filehandler.h
BmpZipperPlugin/: CMakeLists.txt  compressionmodel.cpp  compressionmodel.h  filelistmodel.cpp  filelistmodel.h  progressmodel.cpp  progressmodel.h  qmldir
BmpZipperPlugin/qml/: ColorMap.qml  CustomButton.qml  CustomDialog.qml  CustomDialogManager.qml  CustomProgressBar.qml  FileListModelDelegate.qml
scripts/: build.sh  env.sh  run.sh  start-vnc.sh
